# labs

./: BiDirectionalListOnArray.h  CMakeLists.txt  Calculator.h  FileReader.h  StackOnArray.h  Student.cpp  Student.h  Vocabulary.h  WordCard.h  fraction.cpp  fraction.h  functions.cpp  functions.h  laba5.cpp  laba5.h  letters.txt  main.cpp  main2.cpp  numbers.txt  some.txt
3dTerm/lab1/: Iterator_array.h  Iterator_map.h  visitor.h
OC/Channels/: README.md  buffered_channel.h  main.cpp
OC/LinProcess/: CMakeLists.txt  main.cpp
OC/LinProcess/Killer/: CMakeLists.txt  main.cpp
OC/LinuxLibrary/: CMakeLists.txt  main.cpp
OC/LinuxLibrary/Number/: CMakeLists.txt  Number.cpp
OC/LinuxLibrary/Vector/: CMakeLists.txt  Vector.h
OC/LinuxScript/: main.cpp  script
OC/LinuxScript/Vector/: Vector.cpp
OC/MatrixChannels/: CMakeLists.txt  Matrix.cpp  Matrix.h  Multiply.cpp  Multiply.h  main.cpp
OC/WinMatrices/: WinMatrices.sln
OC/WinMatrices/WinMatrices/: Matrix.cpp  Matrix.h  Multiply.h  WinMatrices.cpp
OC/WinProcess/: CMakeLists.txt  main.cpp
OC/WinProcess/Killer/: main.cpp
OC/WindowsLibrary/: MyVector.cpp  MyVector.h  NumberLib.cpp  NumberLib.h  Showcase.cpp
OC/WindowsScript/: script.ps1
OC/WindowsScript/Number/: Number.h
OC/pThreadsMatrices/: CMakeLists.txt  Matrix.cpp  Multiply.h  main.cpp
laba2/: main.cpp
laba6_TESTS/: CMakeLists.txt
laba6_TESTS/Fraction/: CMakeLists.txt  fraction.cpp  fraction.h
laba6_TESTS/test/: test.cpp
laba7_TESTS/: CMakeLists.txt
laba7_TESTS/Student/: CMakeLists.txt  Student.cpp  Student.h
laba7_TESTS/test/: Tests.cpp
(+16 files in other folders)
